--- a/config.json
+++ b/config.json
@@ -4,11 +4,13 @@
     "port": 20000
   },
   "db_file": "db.json",
-  "sync_interval": 2,
+  "logo_file": "aruixsync.logo",
+  "sync_interval": 0.5,
   "buffer_size": 1024,
   "compress_level": 6,
   "encryption": false,
   "ips": [],
   "file_block_size": 1024,
-  "sync_dir": "./share"
+  "sync_dir": "./share",
+  "db_update_persist_ratio": 4
 }
